feat: get public strudel endpoint
